--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -22,7 +22,7 @@ ul.features-list li:before
 {
     content: "\f24e";
     font-family: 'ionicons';
- 	color: #60c9eb;
+ 	color: #0B3426;
  	margin-left: -25px;
  	padding-right: 10px;
 }
