--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ body
 	text-align: center;
 }
 .section-subtitle{
-	color: #145E45;
+	color: #1B7F37;
 	text-align: center;
 	margin-bottom: 50px;
 }
@@ -80,7 +80,7 @@ p:hover{
     background-color: rgb(11, 52, 38);
 }
 .form-control:focus {
-    border-color: #145E45;
+    border-color: #1B7F37;
     outline: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -103,8 +103,8 @@ ul.nav.navbar-nav.navbar-right{
 	margin-top: 10px;
 }
 .navbar-default .navbar-brand span{
-	/* color: #145E45; */
-	color: #145E45;
+	/* color: #1B7F37; */
+	color: #1B7F37;
 }
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{
 	color: #0B3426;
@@ -197,7 +197,7 @@ ul.nav.navbar-nav.navbar-right{
 }
 .custom-btn:hover{
 	background: #fff;
-	color: #145E45;
+	color: #1B7F37;
 }
 /*=================================================
 ||				4. Find a Tour
@@ -382,7 +382,7 @@ ul.nav.navbar-nav.navbar-right{
 	color: #0B3426;
 }
 a.brand-logo span{
-	color: #145E45;
+	color: #1B7F37;
 }
 a.brand-logo:focus, a.brand-logo:hover{
 	color: #0B3426;
