--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -3,7 +3,7 @@
 	background-position: bottom;
 	background-attachment: fixed;
 	text-transform: uppercase;
-	background: url('../images/section-header.png');
+	background: url('../images/section-header.jpg');
 	text-align: center;
 	background-size: cover;
 }
